--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+26-May-20	* MIARMA 1.5.13.1
+			- Header introduced and warning messages cleaned.
+			* lincor 1.0.6
+			- waitbars removed
+			* af_simp 0.1.8
+			- Call locdetrend function to fix jumps between interpolated and modeled segments that might occur when some trends that appear in  the full version of the time series are not noticeable in local data segments. This was previously part of af_simp code which has been reconverted to a subroutine.
+			* locdetrend 0.1
+
 20-May-20   * MIARMA 1.5.13.0
             - Aka file name is padded with zeros in order to normalize the extension of the field.
             - Some default values for parameters have been changed (refined).
