--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,17 @@
+16-mar-21   * MIARMA 0.0.1.1
+	    - Fixed issue #36
+	    - Minor improvements.
+	    - Added subroutine lscorr.m for LS correction (not implemented yet in the main code) 
+
+	    * regsamp 0.8
+	    - Efficiency improved 1500x
+	    - Requires ismemberf.m from Bruno Luong.
+	    
+	    * armaord 1.1.3  
+	    - 1 minor bug fixed.
+	    - Added verbosity parameter 'verbose': 1 (default) means verbose mode, 0 is silent mode.
+	    
+	    
 09-mar-21   * MIARMA 0.0.1.0
 	    - Fixed issue #35
 	    - Minor improvements.
